--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
@@ -29,6 +29,7 @@
     
   
   <meta name="description" content="Slides  fitvids(&#39;.shareagain&#39;, {players: &#39;iframe&#39;});  
+ Video   
  Abstract Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word entity, for instance, may activate words such as being, thing and object (https://smallworldofwords.org/en/project/explore; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al.">
 
   
@@ -236,6 +237,7 @@
   <meta property="og:url" content="/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/">
   <meta property="og:title" content="Linguistic and embodied systems in conceptual processing: Variation across individuals and items | Pablo Bernabeu">
   <meta property="og:description" content="Slides  fitvids(&#39;.shareagain&#39;, {players: &#39;iframe&#39;});  
+ Video   
  Abstract Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word entity, for instance, may activate words such as being, thing and object (https://smallworldofwords.org/en/project/explore; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al."><meta property="og:image" content="/img/pablobernabeu_image_sharing.png">
   <meta property="twitter:image" content="/img/pablobernabeu_image_sharing.png"><meta property="og:locale" content="en-uk">
   
@@ -271,10 +273,10 @@
   
   "performer": {
     "@type": "Person",
-    "name": "\u003cspan style=\"font-size:150%;\"\u003ePablo Bernabeu, Dermot Lynott and Louise Connell\u003c/span\u003e"
+    "name": "\u003cspan style=\"font-size:140%;\"\u003ePablo Bernabeu, Dermot Lynott and Louise Connell\u003c/span\u003e"
   },
   
-  "description": "Slides  fitvids('.shareagain', {players: 'iframe'});  \n Abstract Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word entity, for instance, may activate words such as being, thing and object (https://smallworldofwords.org/en/project/explore; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al."
+  "description": "Slides  fitvids('.shareagain', {players: 'iframe'});  \n Video   \n Abstract Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word entity, for instance, may activate words such as being, thing and object (https://smallworldofwords.org/en/project/explore; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al."
 }
 </script>
 
@@ -634,7 +636,7 @@
 
 
   
-  <span><span style="font-size:150%;">Pablo Bernabeu, Dermot Lynott and Louise Connell</span></span>
+  <span><span style="font-size:140%;">Pablo Bernabeu, Dermot Lynott and Louise Connell</span></span>
 
   </div>
   
@@ -733,9 +735,17 @@
 </div>
 <p><br></p>
 </div>
+<div id="video" class="section level5">
+<h5><a href="https://www.youtube.com/watch?v=y2bopgYWYvE&amp;ab_channel=LancasterPsychology">Video</a></h5>
+<div style="position: relative; margin-top: 20px; padding-top: 56.25%;">
+<iframe src="https://www.youtube-nocookie.com/embed/y2bopgYWYvE" frameborder="0" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;">
+</iframe>
+</div>
+<p><br></p>
+</div>
 <div id="abstract" class="section level3">
 <h3>Abstract</h3>
-<p>Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word <em>entity</em>, for instance, may activate words such as <em>being</em>, <em>thing</em> and o<em>bject</em> (<a href="https://smallworldofwords.org/en/project/explore" class="uri">https://smallworldofwords.org/en/project/explore</a>; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al., 2019). For instance, <em>entity</em> activates visual, auditory and head-specific meanings (<a href="https://embodiedcognitionlab.shinyapps.io/sensorimotor_norms" class="uri">https://embodiedcognitionlab.shinyapps.io/sensorimotor_norms</a>; Lynott et al., 2020). Research has also suggested that the linguistic system is more important for relatively abstract words—e.g., <em>attempt</em>—, whereas the embodied system is more important for more concrete words—e.g., <em>building</em> (Bolognesi &amp; Steen, 2018). The role of individual differences has also been investigated (Dils &amp; Boroditsky, 2010), although to a lesser extent. An individual’s linguistic experience (e.g., larger vocabulary) facilitates word processing and task-relevant attention (Pexman &amp; Yap, 2018; Yap et al., 2017), while greater sensorimotor experience enables more detailed meaning activation within specific conceptual areas (e.g., space: Vukovic &amp; Williams, 2015). The variation across individuals and items, within both the linguistic and embodied systems, is seldom considered simultaneously. We are undertaking this in two studies. The first study (Bernabeu et al., 2021) will merge existing datasets (Lynott et al., 2020; Pexman et al., 2017; Pexman &amp; Yap, 2018; Wingfield &amp; Connell, 2019). The second study will collect novel data to investigate questions such as the unique roles of vocabulary size, sensorimotor experience and attentional control. To determine the sample size for the latter study, two pilot studies with larger-than-average samples were conducted, using the aforementioned datasets and that of Hutchison et al. (2013). Simulation-based, prospective power curves were performed. These pilots revealed important roles for linguistic and embodied information, vocabulary size, and attentional control, as well as statistical power considerations.</p>
+<p>Research in conceptual processing has suggested that the comprehension of words draws on complementary cognitive systems. In the milliseconds during which a word is processed, the linguistic system is activated first. Reading the word <em>entity</em>, for instance, may activate words such as <em>being</em>, <em>thing</em> and <em>object</em> (<a href="https://smallworldofwords.org/en/project/explore" class="uri">https://smallworldofwords.org/en/project/explore</a>; De Deyne et al., 2019). Thereupon, the embodied system is activated, incorporating sensorimotor, emotional and social dimensions (Borghi et al., 2019). For instance, <em>entity</em> activates visual, auditory and head-specific meanings (<a href="https://embodiedcognitionlab.shinyapps.io/sensorimotor_norms" class="uri">https://embodiedcognitionlab.shinyapps.io/sensorimotor_norms</a>; Lynott et al., 2020). Research has also suggested that the linguistic system is more important for relatively abstract words—e.g., <em>attempt</em>—, whereas the embodied system is more important for more concrete words—e.g., <em>building</em> (Bolognesi &amp; Steen, 2018). The role of individual differences has also been investigated (Dils &amp; Boroditsky, 2010), although to a lesser extent. An individual’s linguistic experience (e.g., larger vocabulary) facilitates word processing and task-relevant attention (Pexman &amp; Yap, 2018; Yap et al., 2017), while greater sensorimotor experience enables more detailed meaning activation within specific conceptual areas (e.g., space: Vukovic &amp; Williams, 2015). The variation across individuals and items, within both the linguistic and embodied systems, is seldom considered simultaneously. We are undertaking this in two studies. The first study (Bernabeu et al., 2021) will merge existing datasets (Lynott et al., 2020; Pexman et al., 2017; Pexman &amp; Yap, 2018; Wingfield &amp; Connell, 2019). The second study will collect novel data to investigate questions such as the unique roles of vocabulary size, sensorimotor experience and attentional control. To determine the sample size for the latter study, two pilot studies with larger-than-average samples were conducted, using the aforementioned datasets and that of Hutchison et al. (2013). Simulation-based, prospective power curves were performed. These pilots revealed important roles for linguistic and embodied information, vocabulary size, and attentional control, as well as statistical power considerations.</p>
 </div>
 <div id="references" class="section level3">
 <h3>References</h3>
