--- a/index.html
+++ b/index.html
@@ -5227,11 +5227,12 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <h3 id="2021-linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items-a-hreftalklinguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-itemssee-morea">[2021] Linguistic and embodied systems in conceptual processing: Variation across individuals and items (<a href='./talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items'>see more</a>)</h3>
-<div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
-<iframe src="https://www.youtube-nocookie.com/embed/y2bopgYWYvE" frameborder="0" allowfullscreen
-style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
+      <h3 id="2021-linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items-a-hrefhttpswwwyoutubecomwatchvy2bopgywyveab_channellancasterpsychologysee-videoa">[2021] Linguistic and embodied systems in conceptual processing: Variation across individuals and items (<a href='https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>see video</a>)</h3>
+<div style = "margin-top: 20px; margin-left: 20%;">
+<a href = 'https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>
+<img src = 'https://cdn.pixabay.com/photo/2016/08/20/06/09/video-1606945_960_720.png' width = 50%></a>
 </div>
+<div style = 'padding-bottom: 7%;'></div>
 <h3 id="2021-towards-reproducibility-and-maximally-open-data-a-hreftalktowards-reproducibility-and-maximally-open-datasee-videoa">[2021] Towards reproducibility and maximally-open data (<a href='./talk/towards-reproducibility-and-maximally-open-data'>see video</a>)</h3>
 <div style = "margin-top: 20px; margin-left: 20%;">
 <a href = '/talk/towards-reproducibility-and-maximally-open-data'>
