--- a/talk/index.html
+++ b/talk/index.html
@@ -634,9 +634,11 @@
 
     
     <div class="article-style">
-      Slides  fitvids('.shareagain', {players: 'iframe'});  
- Video   
- Abstract Research in conceptual processing has suggested that the …
+      Video
+ Slides
+
+ fitvids('.shareagain', {players: 'iframe'});  
+Abstract Research in conceptual processing has suggested that the …
     </div>
     
 
