--- a/index.html
+++ b/index.html
@@ -5227,52 +5227,52 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <h3 id="2021-linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items-a-hrefhttpswwwyoutubecomwatchvy2bopgywyveab_channellancasterpsychologysee-videoa">[2021] Linguistic and embodied systems in conceptual processing: Variation across individuals and items (<a href='https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>see video</a>)</h3>
+      <h3 id="span-stylecolorgrey-font-size702021-spannbsp-linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items-a-hrefhttpswwwyoutubecomwatchvy2bopgywyveab_channellancasterpsychologysee-videoa"><span style='color:grey; font-size:70%;'>2021 ·</span>  Linguistic and embodied systems in conceptual processing: Variation across individuals and items (<a href='https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>see video</a>)</h3>
 <div style = "margin-top: 20px; margin-left: 20%;">
 <a href = 'https://www.youtube.com/watch?v=y2bopgYWYvE&ab_channel=LancasterPsychology'>
 <img src = 'https://cdn.pixabay.com/photo/2016/08/20/06/09/video-1606945_960_720.png' width = 50%></a>
 </div>
 <div style = 'padding-bottom: 7%;'></div>
-<h3 id="2021-towards-reproducibility-and-maximally-open-data-a-hreftalktowards-reproducibility-and-maximally-open-datasee-videoa">[2021] Towards reproducibility and maximally-open data (<a href='./talk/towards-reproducibility-and-maximally-open-data'>see video</a>)</h3>
+<h3 id="span-stylecolorgrey-font-size702021-spannbsp-towards-reproducibility-and-maximally-open-data-a-hreftalktowards-reproducibility-and-maximally-open-datasee-videoa"><span style='color:grey; font-size:70%;'>2021 ·</span>  Towards reproducibility and maximally-open data (<a href='./talk/towards-reproducibility-and-maximally-open-data'>see video</a>)</h3>
 <div style = "margin-top: 20px; margin-left: 20%;">
 <a href = '/talk/towards-reproducibility-and-maximally-open-data'>
 <img src = 'https://cdn.pixabay.com/photo/2016/08/20/06/09/video-1606945_960_720.png' width = 50%></a>
 </div>
 <div style = 'padding-bottom: 7%;'></div>
-<h3 id="2020-reproducibilidad-en-torno-a-una-aplicación-web-a-hreftalk2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-webver-mása">[2020] Reproducibilidad en torno a una aplicación web (<a href='./talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/'>ver más</a>)</h3>
+<h3 id="span-stylecolorgrey-font-size702020-spannbsp-reproducibilidad-en-torno-a-una-aplicación-web-a-hreftalk2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-webver-mása"><span style='color:grey; font-size:70%;'>2020 ·</span>  Reproducibilidad en torno a una aplicación web (<a href='./talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/'>ver más</a>)</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2020-workshop-on-r-markdown-dashboards-and-binder-see-programme-and-materialshttpsgithubcompablobernabeucarpentrycon-2020-workshop-open-data-reproducibility">[2020] Workshop on R Markdown, dashboards and Binder (see 
+<h3 id="span-stylecolorgrey-font-size702020-spannbsp-workshop-on-r-markdown-dashboards-and-binder-see-programme-and-materialshttpsgithubcompablobernabeucarpentrycon-2020-workshop-open-data-reproducibility"><span style='color:grey; font-size:70%;'>2020 ·</span>  Workshop on R Markdown, dashboards and Binder (see 
 <a href="https://github.com/pablobernabeu/CarpentryCon-2020-workshop-Open-Data-Reproducibility" target="_blank" rel="noopener">programme and materials</a>)</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/wZsPD7CgJC0" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2020-personal-profile-and-experience-at-lancaster-u-psychology-dept">[2020] Personal profile and experience at Lancaster U. Psychology Dept.</h3>
+<h3 id="span-stylecolorgrey-font-size702020-spannbsp-personal-profile-and-experience-at-lancaster-u-psychology-dept"><span style='color:grey; font-size:70%;'>2020 ·</span>  Personal profile and experience at Lancaster U. Psychology Dept.</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/ZEoan5tWqFg" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2020-embedding-open-research-and-reproducibility-in-the-ug-and-pgt-curricula">[2020] Embedding open research and reproducibility in the UG and PGT curricula</h3>
+<h3 id="span-stylecolorgrey-font-size702020-spannbsp-embedding-open-research-and-reproducibility-in-the-ug-and-pgt-curricula"><span style='color:grey; font-size:70%;'>2020 ·</span>  Embedding open research and reproducibility in the UG and PGT curricula</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/vzkDBZ1qWfY" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2019-part-of-application-for-gorilla-grantother-funding">[2019] Part of application for 
+<h3 id="span-stylecolorgrey-font-size702019-spannbsp-part-of-application-for-gorilla-grantother-funding"><span style='color:grey; font-size:70%;'>2019 ·</span>  Part of application for 
 <a href="#other-funding">Gorilla Grant</a></h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/DTHFuC0Lw0Y" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2019-part-of-application-for-software-sustainability-institute-fellowshipother-funding">[2019] Part of application for 
+<h3 id="span-stylecolorgrey-font-size702019-spannbsp-part-of-application-for-software-sustainability-institute-fellowshipother-funding"><span style='color:grey; font-size:70%;'>2019 ·</span>  Part of application for 
 <a href="#other-funding">Software Sustainability Institute Fellowship</a></h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%; margin-bottom: -25px;">
 <iframe src="https://www.youtube-nocookie.com/embed/F-MQ8BYwLn4" frameborder="0" allowfullscreen
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
-<h3 id="2019-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep-a-hrefhttpsosfioh36wrsee-videoa">[2019] Demonstration of procedure for 
+<h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep-a-hrefhttpsosfioh36wrsee-videoa"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for 
 <a href="./publication/chen-etal-inprep/">PSA experiments</a> (<a href='https://osf.io/h36wr/'>see video</a>)</h3>
 <div style = "margin-top: 20px; margin-left: 20%;">
 <a href = 'https://osf.io/h36wr/'>
