--- a/index.html
+++ b/index.html
@@ -4860,7 +4860,7 @@
 <p>Besides this experience, I have a 
 <a href="https://carpentries.org/become-instructor/" target="_blank" rel="noopener">Carpentries Instructor certificate</a>, I have run several 
 <a href="https://pablobernabeu.github.io/#workshops" target="_blank" rel="noopener">workshops and presentations</a>, and earlier I 
-<a href="https://osf.io/84ktq/" target="_blank" rel="noopener">taught English to secondary-education students, and Spanish to adults</a>.</p>
+<a href="./#other-work">taught English to secondary-education students, and Spanish to adults</a>.</p>
 
     </div>
   
@@ -5169,7 +5169,12 @@
 </tr>
 <tr>
 <td>2013 – 2016</td>
-<td>Communications and student recruitment. 
+<td>Communication and student recruitment. 
+<a href="https://bravosol.net" target="_blank" rel="noopener">Academia Bravosol</a>, Madrid, Spain</td>
+</tr>
+<tr>
+<td>2011 – 2013</td>
+<td>Occasional teacher of English and Spanish. 
 <a href="https://bravosol.net" target="_blank" rel="noopener">Academia Bravosol</a>, Madrid, Spain</td>
 </tr>
 </tbody>
