--- a/index.html
+++ b/index.html
@@ -2924,7 +2924,7 @@
 
     
     <div class="article-style">
-      There is a lot of discrimination at European universities and in the corresponding academia. Minorities are too often oppressed and …
+      This blog post does not provide a complete overview of the atmosphere at university or in academia.  There is a lot of discrimination …
     </div>
     
 
