--- a/index.html
+++ b/index.html
@@ -2924,7 +2924,7 @@
 
     
     <div class="article-style">
-      This blog post does not provide a complete overview of the atmosphere at university or in academia.  There is a lot of discrimination …
+      This blog post does not provide a complete overview of the atmosphere at university or in academia, where I think that fairness is far …
     </div>
     
 
