--- a/index.html
+++ b/index.html
@@ -2924,7 +2924,7 @@
 
     
     <div class="article-style">
-      The powercurve function from the simr package in R often requires a very long running time when the method used for the calculation of …
+      The powercurve function from the simr package in R (Green &amp; MacLeod, 2016) can incur very long running times when the method used …
     </div>
     
 
