--- a/index.html
+++ b/index.html
@@ -3702,7 +3702,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Blog</h1>
-    <p>I also share the <a href="./categories/r/">posts dealing with R code</a> at <a href="https://www.r-bloggers.com">https://www.r-bloggers.com</a> and some other sites.</p>
+    <p>Some of the <a href="./categories/r/">posts involving R code</a> are republished at <a href="https://www.datasciencecentral.com/">datasciencecentral</a>, <a href="https://dev.to/">dev.to</a> and <a href="https://www.r-bloggers.com">R-bloggers</a>.</p>
   </div>
   <div class="col-12 col-lg-8">
 
