--- a/index.html
+++ b/index.html
@@ -5355,7 +5355,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="./categories/data-mining/">data mining</a>, <a href="./categories/r/">R</a>, <a href="./categories/big-data/">big data</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="./categories/data-mining/">data mining</a>, <a href="./categories/big-data/">big data</a>, <a href="./categories/r/">R</a></span>
   
 
 </div>
