--- a/index.html
+++ b/index.html
@@ -2791,7 +2791,7 @@
 
       <div class="portrait-title">
         <h2>Pablo Bernabeu</h2>
-        <h3>Psychology PhD student and teaching assistant at Lancaster University</h3>
+        <h3>Psychology PhD student<br>and teaching assistant<br>at Lancaster University</h3>
         <h3 style="margin-top:5%;"><a href="mailto:p.bernabeu@lancaster.ac.uk">p.bernabeu@lancaster.ac.uk</a><br><a href="mailto:pcbernabeu@gmail.com">pcbernabeu@gmail.com</a></h3>
 
         
@@ -3241,8 +3241,8 @@
 <td>R Markdown; online data dashboards with Shiny, Flexdashboard, Plotly; Binder environments (e.g., <a href="https://osf.io/brkjw/"><i class="fas fa-link"></i></a>); mining, preprocessing, analysis of Big Data (language corpora, news and social media, through API or web scraping); statistics; visualisation; Natural Language Processing (regular expressions, word frequency and sentiment analysis, topic modelling; e.g., <a href="/2016/the-louisiana-minnesota-texas-crisis-across-media-and-time-a-big-data-exercise/"><i class="fas fa-link"></i></a>); Tidyverse (e.g., <a href="https://github.com/pablobernabeu/Experiment-simulation-app"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
-<td><strong>Data management and web development</strong></td>
-<td>Git version control, High-Performance Computing, Bash (command line), Binder environments, HTML, CSS (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>)</td>
+<td><strong>Data, web and writing</strong></td>
+<td>Git, Bash, High-Performance Computing, Binder environments, HTML, CSS, LaTeX (e.g., <a href="https://github.com/pablobernabeu"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
 <td><strong>Business and administration</strong></td>
