--- a/talk/index.html
+++ b/talk/index.html
@@ -772,7 +772,7 @@ Abstract Research in conceptual processing has suggested that the …
 
     
     <div class="article-style">
-      Slides    Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, …
+      In this talk, I will look over the rationale for LMEMs, and demonstrate how to fit them in R (Brauer &amp; Curtin, 2018; Luke, 2017). …
     </div>
     
 
