--- a/index.html
+++ b/index.html
@@ -3680,7 +3680,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 
     
     <div class="article-style">
-      window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"}) Linear mixed-effects …
+      When a model has struggled to find enough information in the data to account for every predictor&mdash;especially for every random …
     </div>
     
 
