--- a/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/index.html
+++ b/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Slides    Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, such as participants, trials, items, channels, etc (for an earlier approach, see Clark, 1973). This variation is modelled in terms of random intercepts (e.g., overall variation per participant) as well as random slopes for the fixed effects (e.g., treatment effect per participant). These measures help reduce false positives and false negatives (Barr et al.">
+  <meta name="description" content="In this talk, I will look over the rationale for LMEMs, and demonstrate how to fit them in R (Brauer &amp; Curtin, 2018; Luke, 2017). Challenges will also be covered. For instance, when using the widely-accepted &#39;maximal&#39; approach, based on fitting all possible random effects for each fixed effect, models sometimes fail to find a solution, or &#39;convergence&#39;. Advice for the problem of nonconvergence will be demonstrated, based on the progressive lightening of the random effects structure (Singman &amp; Kellen, 2017; for an alternative approach, especially with small samples, see Matuschek et al., 2017). At the end, on a different note, I will present a web application that facilitates data simulation for research and teaching (Bernabeu &amp; Lynott, 2020).">
 
   
   <link rel="alternate" hreflang="en-uk" href="https://pablobernabeu.github.io/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/">
@@ -231,7 +231,7 @@
   <meta property="og:site_name" content="Pablo Bernabeu">
   <meta property="og:url" content="https://pablobernabeu.github.io/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/">
   <meta property="og:title" content="Mixed-effects models in R, and a new tool for data simulation | Pablo Bernabeu">
-  <meta property="og:description" content="Slides    Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, such as participants, trials, items, channels, etc (for an earlier approach, see Clark, 1973). This variation is modelled in terms of random intercepts (e.g., overall variation per participant) as well as random slopes for the fixed effects (e.g., treatment effect per participant). These measures help reduce false positives and false negatives (Barr et al."><meta property="og:image" content="https://pablobernabeu.github.io/img/default_preview_image.png">
+  <meta property="og:description" content="In this talk, I will look over the rationale for LMEMs, and demonstrate how to fit them in R (Brauer &amp; Curtin, 2018; Luke, 2017). Challenges will also be covered. For instance, when using the widely-accepted &#39;maximal&#39; approach, based on fitting all possible random effects for each fixed effect, models sometimes fail to find a solution, or &#39;convergence&#39;. Advice for the problem of nonconvergence will be demonstrated, based on the progressive lightening of the random effects structure (Singman &amp; Kellen, 2017; for an alternative approach, especially with small samples, see Matuschek et al., 2017). At the end, on a different note, I will present a web application that facilitates data simulation for research and teaching (Bernabeu &amp; Lynott, 2020)."><meta property="og:image" content="https://pablobernabeu.github.io/img/default_preview_image.png">
   <meta property="twitter:image" content="https://pablobernabeu.github.io/img/default_preview_image.png"><meta property="og:locale" content="en-uk">
   
     
@@ -269,7 +269,7 @@
     "name": "Pablo Bernabeu"
   },
   
-  "description": "Slides    Abstract Linear mixed-effects models (LMEMs) are used to account for variation within factors with multiple observations, such as participants, trials, items, channels, etc (for an earlier approach, see Clark, 1973). This variation is modelled in terms of random intercepts (e.g., overall variation per participant) as well as random slopes for the fixed effects (e.g., treatment effect per participant). These measures help reduce false positives and false negatives (Barr et al."
+  "description": "In this talk, I will look over the rationale for LMEMs, and demonstrate how to fit them in R (Brauer \u0026 Curtin, 2018; Luke, 2017). Challenges will also be covered. For instance, when using the widely-accepted 'maximal' approach, based on fitting all possible random effects for each fixed effect, models sometimes fail to find a solution, or 'convergence'. Advice for the problem of nonconvergence will be demonstrated, based on the progressive lightening of the random effects structure (Singman \u0026 Kellen, 2017; for an alternative approach, especially with small samples, see Matuschek et al., 2017). At the end, on a different note, I will present a web application that facilitates data simulation for research and teaching (Bernabeu \u0026 Lynott, 2020)."
 }
 </script>
 
@@ -578,7 +578,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/statistics/">statistics</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/statistics/">statistics</a>, <a href="/categories/linear-mixed-effects-models/">linear mixed-effects models</a></span>
   
 
 </div>
