--- a/index.html
+++ b/index.html
@@ -3134,6 +3134,14 @@
 </tr>
 <tr>
 <td align="center"></td>
+<td>Introduction to cognitive psychology (111) — Seminars and essay marking</td>
+</tr>
+<tr>
+<td align="center"></td>
+<td>Social psychology in the digital age (113) — Seminars</td>
+</tr>
+<tr>
+<td align="center"></td>
 <td>Statistics for psychologists I (121) using R — Labs</td>
 </tr>
 <tr>
