--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides/index.html
@@ -338,7 +338,7 @@ Following Brauer and Curtin (2018)
 
 ---
 
-## Interaction: Vocabulary size by visual-modality difference
+## Interaction: Vocabulary size by interstimulus interval
 
 &lt;img src="index_files/figure-html/unnamed-chunk-8-1.png" height="430px" style="display: block; margin: auto;" /&gt;
 
@@ -556,7 +556,7 @@ Monte Carlo simulations operate by running the statistical model specified a lar
 
 ------
 
-- High-End Computing facility at Lancaster University hosted computationally-expensive analyses.
+- Time-consuming analyses run on High-End Computing facility at Lancaster University.
 
 
 ---
