--- a/index.html
+++ b/index.html
@@ -3421,7 +3421,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <div class="row">
   
     <div class="col-12 col-lg-4 section-heading">
-      <h1>Other funding</h1>
+      <h1>Other funding and awards</h1>
       
     </div>
     <div class="col-12 col-lg-8">
@@ -3436,7 +3436,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <tbody>
 <tr>
 <td>2021</td>
-<td>Joint runner-up in the <a href="https://osc-galway.ie/competition/">Open Scholarhip Prize Competition 2021</a>, organised by <a href="https://osc-galway.ie/">Open Scholarship Community Galway</a></td>
+<td>Joint second place in the <a href="https://osc-galway.ie/competition/">Open Scholarship Prize Competition</a> organised by <a href="https://osc-galway.ie/">Open Scholarship Community Galway</a></td>
 <td>Prize awarded after <a href="/talk/towards-reproducibility-and-maximally-open-data/">a final series of presentations</a>, and used in PhD research.</td>
 </tr>
 <tr>
@@ -3543,27 +3543,27 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </thead>
 <tbody>
 <tr>
-<td>May – July 2018</td>
-<td>Service analyst. <a href="https://onfido.com/">Onfido</a>, London, UK</td>
+<td><div style='white-space:nowrap;'>May – July 2018</div></td>
+<td>Service analyst. <a href="https://onfido.com/">Onfido</a>, London, UK. <br> <span style='color:#5A826F;'>I contributed to the verification of semi-automated identity checks. Besides examining samples of checks, I created a self-updating data dashboard in Excel that summarised the results through tables and plots.</span></td>
 </tr>
 <tr>
-<td>Dec 2015 – Feb 2016</td>
-<td>Part-time Data Science market research and student recruitment. <a href="https://www.tilburguniversity.edu/">Tilburg U.</a></td>
+<td><div style='white-space:nowrap;'>Dec 2015 – Feb 2016</div></td>
+<td>Part-time Data Science market research and student recruitment. <a href="https://www.tilburguniversity.edu/">Tilburg U.</a>. <br> <span style='color:#5A826F;'>I contributed to the elaboration of a leaflet, and informed prospective students at open days.</span></td>
 </tr>
 <tr>
-<td>2015 – 2016</td>
-<td>Student representative at master’s fairs in Spain. <a href="https://www.ru.nl/english/">Radboud U.</a>, <a href="https://www.tilburguniversity.edu/">Tilburg U.</a></td>
+<td><div style='white-space:nowrap;'>2015 – 2016</div></td>
+<td>Student representative at master’s fairs in Spain. <a href="https://www.ru.nl/english/">Radboud U.</a>, <a href="https://www.tilburguniversity.edu/">Tilburg U.</a> <br> <span style='color:#5A826F;'>I worked at three fairs with Radboud University, and at one with Tilburg University.</span></td>
 </tr>
 <tr>
-<td>2013 – 2016</td>
+<td><div style='white-space:nowrap;'>2013 – 2016</div></td>
 <td>Presenter of my master's programme at open days. <a href="https://www.tilburguniversity.edu/">Tilburg U.</a></td>
 </tr>
 <tr>
-<td>2013 – 2016</td>
+<td><div style='white-space:nowrap;'>2013 – 2016</div></td>
 <td>Communication and student recruitment. <a href="https://bravosol.net">Academia Bravosol</a>, Madrid, Spain</td>
 </tr>
 <tr>
-<td>2011 – 2013</td>
+<td><div style='white-space:nowrap;'>2011 – 2013</div></td>
 <td>Occasional teacher of English and Spanish. <a href="https://bravosol.net">Academia Bravosol</a>, Madrid, Spain</td>
 </tr>
 </tbody>
