--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -230,7 +230,7 @@
   
   <meta property="og:site_name" content="Pablo Bernabeu">
   <meta property="og:url" content="https://pablobernabeu.github.io/publication/bernabeu_vogt2015/">
-  <meta property="og:title" content="Language evolution: current status and future directions | Pablo Bernabeu">
+  <meta property="og:title" content="Language evolution: Current status and future directions | Pablo Bernabeu">
   <meta property="og:description" content="The topic of language evolution is characterised by the scarcity of records, but also by a large flow  of research  produced within  multiple subtopics  and perspectives.  Over the  past  few decades, significant advancement has been made on the geographical and temporal origins of language, while current work is rather devoted to the underpinnings of language, in brain, genes, body, and culture of humans. Much of this literature is polarized over the crucial dichotomy of nativism  versus  emergentism.  Our  state  of  affairs  report  also  confirms  a  high  degree  of speculation,  albeit  with a  decrease  for modelling. To  tackle the  speculation  and the large research flow, we propose a more impersonal kind of review, focused on the topic’s questions rather than on particular accounts. Another observation is that novel perspectives are on the rise.  One  of  these  highlights  the  importance  of  perceptual  cognition,  often  dubbed ‘embodiment,’ in  the earlier  evolution  of language.  In  following this  lead,  we adapted  a previous experiment which had investigated the correspondence between certain perceptual features of events, and different  grammatical orders arising as participants  acted out those events. That design made a perfect basis for us to put in an additional variable, namely the contrast  between  body-based  communication  (gestures),  and  more  disembodied communication (symbol matching). Albeit tentative, the results of this pilot experiment reveal a greater effect of the embodiment variable on the grammatical preferences, which we see as inviting further exploration of embodied cognition in language evolution."><meta property="og:image" content="https://pablobernabeu.github.io/publication/bernabeu_vogt2015/featured.png">
   <meta property="twitter:image" content="https://pablobernabeu.github.io/publication/bernabeu_vogt2015/featured.png"><meta property="og:locale" content="en-uk">
   
@@ -261,7 +261,7 @@
     "@type": "WebPage",
     "@id": "https://pablobernabeu.github.io/publication/bernabeu_vogt2015/"
   },
-  "headline": "Language evolution: current status and future directions",
+  "headline": "Language evolution: Current status and future directions",
   
   "image": [
     "https://pablobernabeu.github.io/publication/bernabeu_vogt2015/featured.png"
@@ -301,7 +301,7 @@
 
 
 
-  <title>Language evolution: current status and future directions | Pablo Bernabeu</title>
+  <title>Language evolution: Current status and future directions | Pablo Bernabeu</title>
 
 </head>
 
@@ -574,7 +574,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Language evolution: current status and future directions</h1>
+  <h1>Language evolution: Current status and future directions</h1>
 
   
 
@@ -717,7 +717,7 @@
 
     <div class="article-style"><h3 id="reference">Reference</h3>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P., &amp; Vogt, P. (2015). Language evolution: current status and future directions. <em>Tenth Language at the University of Essex (LangUE) Postgraduate Conference</em>. <a href="https://researchgate.net/publication/280858062/">https://researchgate.net/publication/280858062/</a></p>
+<p>Bernabeu, P., &amp; Vogt, P. (2015). Language evolution: Current status and future directions. <em>Tenth Language at the University of Essex (LangUE) Postgraduate Conference</em>. <a href="https://researchgate.net/publication/280858062/">https://researchgate.net/publication/280858062/</a></p>
 </div>
 </div>
 
