--- a/publication/index.html
+++ b/publication/index.html
@@ -1345,7 +1345,7 @@
 
   </span>
   (2015).
-  <a href="/publication/bernabeu_vogt2015/">Language evolution: current status and future directions</a>.
+  <a href="/publication/bernabeu_vogt2015/">Language evolution: Current status and future directions</a>.
   <em>Tenth Language at the University of Essex (LangUE) Postgraduate Conference</em>.
   
   <p>
