--- a/index.html
+++ b/index.html
@@ -3443,7 +3443,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 
     
     <div class="article-style">
-      This function is designed to avoid (R) Markdown knitting errors caused by service files from previous knittings (e.g., manuscript.tex, …
+      The function knit-deleting-service-files() is designed to avoid (R) Markdown knitting errors caused by service files from previous …
     </div>
     
 
