--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -724,7 +724,7 @@
     <a href=https://www.jbe-platform.com/deliver/fulltext/10.1075/dujal.15019.ber/dujal.15019.ber.pdf?itemId&#61;%2Fcontent%2Fjournals%2F10.1075%2Fdujal.15019.ber&amp;mimeType&#61;pdf&amp;containerItemId&#61;content/jbep>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Paper
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
       </h3></button>
       </a>
     
