--- a/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
+++ b/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
@@ -744,7 +744,7 @@
     <a href=https://psyarxiv.com/s2c5h>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Paper
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
       </h3></button>
       </a>
     
