--- a/index.html
+++ b/index.html
@@ -2637,7 +2637,7 @@
 <tr>
 <td>Feb 2022</td>
 <td>Talk</td>
-<td>Linguistic and embodied systems in conceptual processing: Variation across individuals, words and tasks</td>
+<td><a href="https://doi.org/10.17605/OSF.IO/UERYQ">Linguistic and embodied systems in conceptual processing: Variation across individuals, words and tasks</a></td>
 <td>Language and Cognition Seminars, Dept. Psychology, Lancaster University</td>
 </tr>
 <tr>
