--- a/index.html
+++ b/index.html
@@ -3151,7 +3151,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>As a graduate teaching assistant, I devote 180 hours a year to leading 30 seminars and marking 80 essays in developmental, cognitive and social psychology, as well as helping in 30 statistics labs. I was also a representative for graduate teaching assistants in the department for a year.</p>
+      <p>My PhD scholarship is teaching-based, which means that I contribute to my department’s curriculum for 180 hours a year. Each year, I have led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics labs. This activity is detailed below.</p>
 <table>
 <thead>
 <tr>
@@ -3166,7 +3166,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Introduction to neuroscience (112)— Seminars</td>
+<td>Introduction to neuroscience (112) — Seminars</td>
 </tr>
 <tr>
 <td align="center"></td>
@@ -3186,7 +3186,7 @@
 </tr>
 <tr>
 <td align="center"></td>
-<td>Introduction to neuroscience (112)— Seminars</td>
+<td>Introduction to neuroscience (112) — Seminars</td>
 </tr>
 <tr>
 <td align="center"></td>
@@ -3222,7 +3222,8 @@
 </tr>
 </tbody>
 </table>
-<p>Besides this experience, I have a <a href="https://carpentries.org/become-instructor/">Carpentries Instructor certificate</a>, I have run several <a href="https://pablobernabeu.github.io/#workshops">workshops and presentations</a>, and earlier I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">Spanish to adults in Lithuania</a>.</p>
+<p>In addition, I was a representative for graduate teaching assistants in my department for a year.</p>
+<p>I am also a <a href="https://carpentries.org/become-instructor/">Certified Carpentries Instructor</a> and I have run several <a href="https://pablobernabeu.github.io/#workshops">workshops on data analysis using R</a>. Earlier in my career, I <a href="/#other-work">taught English to secondary-education students in Spain</a>, and <a href="/#BA-degree">Spanish to adults in Lithuania</a>.</p>
 
     </div>
   
