--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://psyarxiv.com/5gjvk/download" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/t2pjv" target="_blank" rel="noopener">
   PDF
 </a>
 
