--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -653,7 +653,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://psyarxiv.com/5gjvk/download" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.31234/osf.io/t2pjv" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -722,7 +722,7 @@
     
 
     
-    <a href=https://psyarxiv.com/5gjvk/download>
+    <a href=https://doi.org/10.31234/osf.io/t2pjv>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
       <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
