--- a/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
+++ b/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
@@ -744,14 +744,14 @@
     <a href=https://doi.org/10.31234/osf.io/s2c5h>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
+      Open full text
       </h3></button>
       </a>
     
 
     <div class="article-style"><h3 id="reference">Reference</h3>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P. (2018). <em>Dutch modality exclusivity norms for 336 properties and 411 concepts</em>. PsyArXiV. <a href="https://doi.org/10.31234/osf.io/s2c5h">https://doi.org/10.31234/osf.io/s2c5h</a></p>
+<p>Bernabeu, P. (2018). <em>Dutch modality exclusivity norms for 336 properties and 411 concepts</em>. PsyArXiv. <a href="https://doi.org/10.31234/osf.io/s2c5h">https://doi.org/10.31234/osf.io/s2c5h</a></p>
 </div>
 </div>
 
