--- a/publication/bernabeu-2017-mphil-thesis/index.html
+++ b/publication/bernabeu-2017-mphil-thesis/index.html
@@ -790,7 +790,7 @@
     <a href=https://doi.org/10.31234/osf.io/5gjvk>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
+      Open full text
       </h3></button>
       </a>
     
@@ -798,7 +798,7 @@
     <div class="article-style"><br>
 <h3 id="reference">Reference</h3>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P. (2017). <em>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</em>. PsyArXiV. <a href="https://doi.org/10.31234/osf.io/5gjvk">https://doi.org/10.31234/osf.io/5gjvk</a></p>
+<p>Bernabeu, P. (2017). <em>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</em>. PsyArXiv. <a href="https://doi.org/10.31234/osf.io/5gjvk">https://doi.org/10.31234/osf.io/5gjvk</a></p>
 </div>
 <br>
 </div>
