--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -794,7 +794,7 @@
     <a href=https://psyarxiv.com/a5pcz>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Full text
+      Open full text
       </h3></button>
       </a>
     
