--- a/index.html
+++ b/index.html
@@ -2977,7 +2977,7 @@
 <td>Sept 2022</td>
 <td>Talk</td>
 <td><a href="https://osf.io/tn568">The interplay between linguistic and embodied systems in conceptual processing</a></td>
-<td>Presented by Dr. Dermot Lynott at the 22^nd Meeting of the European Society for Cognitive Psychology (ESCOP), in Lille, France</td>
+<td>Presented by Dr. Dermot Lynott at the 22<sup>nd</sup> Meeting of the European Society for Cognitive Psychology (ESCOP), in Lille, France</td>
 </tr>
 <tr>
 <td>Feb 2022</td>
