--- a/publication/index.html
+++ b/publication/index.html
@@ -763,7 +763,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97u5c" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://eprints.lancs.ac.uk/id/eprint/177833/" target="_blank" rel="noopener">
   PDF
 </a>
 
