--- a/index.html
+++ b/index.html
@@ -3826,7 +3826,7 @@
 </tr>
 <tr>
 <td><strong>Statistics</strong></td>
-<td>Frequentist and Bayesian statistics. Linear mixed-effects models (e.g., <a href="https://osf.io/ueryq"><i class="fas fa-link"></i></a>) and rest of General Linear Model (e.g., <a href="https://osf.io/97unm/"><i class="fas fa-link"></i></a>)</td>
+<td>Frequentist and Bayesian statistics. Linear mixed-effects models and rest of the General Linear Model, e.g., principal component analysis <a href="https://osf.io/25u3x"><i class="fas fa-link"></i></a></td>
 </tr>
 <tr>
 <td><strong>Programming in R</strong></td>
