--- a/index.html
+++ b/index.html
@@ -3522,7 +3522,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p>My PhD scholarship is teaching-based, which means that I contribute to my department’s curriculum for 180 hours a year. Each year, I have led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics labs. This activity is detailed below.</p>
+      <p>My PhD scholarship was teaching-based, so I contributed to my department’s curriculum for 180 hours a year. Each year, I led 30 seminars and marked 80 essays in developmental, cognitive and social psychology, while also helping in 30 statistics labs. This activity is detailed below.</p>
 <table>
 <thead>
 <tr>
