--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -606,7 +606,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a>, <a href="/categories/r/">R</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/categories/conceptual-processing/">conceptual processing</a>, <a href="/categories/embodied-cognition/">embodied cognition</a>, <a href="/categories/statistical-power/">statistical power</a>, <a href="/categories/research-methods/">research methods</a>, <a href="/categories/statistics/">statistics</a></span>
   
 
 </div>
@@ -770,6 +770,8 @@
   <a class="badge badge-light" href="/tags/simr/">simr</a>
   
   <a class="badge badge-light" href="/tags/rstats/">rstats</a>
+  
+  <a class="badge badge-light" href="/tags/r/">R</a>
   
 </div>
 
