--- a/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/index.html
+++ b/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/index.html
@@ -640,7 +640,6 @@
 
     <div class="article-style">
       
-<script src="https://pablobernabeu.github.io/talk/2020-11-26-mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/index_files/header-attrs/header-attrs.js"></script>
 
 
 <div id="slides" class="section level3">
@@ -678,7 +677,7 @@
   
   <a class="badge badge-light" href="/tags/statistics/">statistics</a>
   
-  <a class="badge badge-light" href="/tags/linear-mixed-effects-models/">linear-mixed effects models</a>
+  <a class="badge badge-light" href="/tags/linear-mixed-effects-models/">linear mixed-effects models</a>
   
   <a class="badge badge-light" href="/tags/regression/">regression</a>
   
