--- a/index.html
+++ b/index.html
@@ -4264,7 +4264,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2022/why-can-t-we-be-friends-plotting-frequentist-lme4-and-bayesian-brms-mixed-effects-models/" >Why can&#39;t we be friends? Plotting frequentist (lme4) and Bayesian (brms) mixed-effects models</a>
+      <a href="/2022/why-can-t-we-be-friends-plotting-frequentist-lmertest-and-bayesian-brms-mixed-effects-models/" >Why can&#39;t we be friends? Plotting frequentist (lmerTest) and Bayesian (brms) mixed-effects models</a>
     </h3>
 
     
