--- a/index.html
+++ b/index.html
@@ -4096,7 +4096,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2022/a-table-of-results-for-bayesian-mixed-effects-models-grouping-variables-and-specifying-random-slopes/" >A table of results for Bayesian mixed-effects models: grouping variables and specifying random slopes</a>
+      <a href="/2022/a-table-of-results-for-bayesian-mixed-effects-models-grouping-variables-and-specifying-random-slopes/" >A table of results for Bayesian mixed-effects models: Grouping variables and specifying random slopes</a>
     </h3>
 
     
@@ -4180,7 +4180,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2022/a-table-of-results-for-frequentist-mixed-effects-models-grouping-variables-and-specifying-random-slopes/" >A table of results for frequentist mixed-effects models: grouping variables and specifying random slopes</a>
+      <a href="/2022/a-table-of-results-for-frequentist-mixed-effects-models-grouping-variables-and-specifying-random-slopes/" >A table of results for frequentist mixed-effects models: Grouping variables and specifying random slopes</a>
     </h3>
 
     
