--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -667,7 +667,6 @@
 
     <div class="article-style">
       
-<script src="https://pablobernabeu.github.io/applications-and-dashboards/experimental-data-simulation/index.en_files/header-attrs/header-attrs.js"></script>
 
 
 <div style="font-size: 25px; color: #614064; padding-top: 15px; padding-bottom: 10px;">
@@ -685,8 +684,8 @@
 </ul>
 <p>More specific guidelines are available in each section.</p>
 </div>
-<div id="globe_with_meridians-the-web-application-can-be-launched-here-or-here." class="section level3">
-<h3>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/experimental-data-simulation/">launched here</a> or <a href="https://mybinder.org/v2/gh/pablobernabeu/Experimental-data-simulation/master?urlpath=shiny">here</a>.</h3>
+<div id="globe_with_meridians-the-web-application-can-be-launched-here." class="section level3">
+<h3>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/experimental-data-simulation/">launched here</a>.</h3>
 <div style="padding-top:8px; padding-bottom:2px; margin-bottom:-20px; color:#665F5F;">
 Screenshot of the <em>Dependent</em> tab (<a href="https://github.com/pablobernabeu/Experimental-data-simulation/raw/master/Screenshot.png">view larger</a>)
 </div>
