--- a/applications-and-dashboards/vtt-transcription-app/index.html
+++ b/applications-and-dashboards/vtt-transcription-app/index.html
@@ -654,12 +654,11 @@
 
     <div class="article-style">
       
-<script src="https://pablobernabeu.github.io/applications-and-dashboards/vtt-transcription-app/index.en_files/header-attrs/header-attrs.js"></script>
 
 
 <p>This open-source, R-based web application allows the conversion of video captions (subtitles) from the <a href="https://www.w3.org/TR/webvtt1/">Web Video Text Tracks (WebVTT) Format</a> into plain texts. For this purpose, users upload a WebVTT file with the extension <code>.vtt</code> or <code>.txt</code> (examples available <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_1.vtt">here</a> and <a href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/Example_subtitles_2.txt">here</a>). Automatically, metadata such as timestamps are removed, and the text is formatted into a paragraph. The result is displayed on the website, and can be downloaded as <code>.docx</code> and <code>.txt</code> documents. Overall, this application serves to improve the accessibility of video captions.</p>
-<div id="globe_with_meridians-the-web-application-can-be-launched-here-or-here" class="section level2">
-<h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a> or <a href="https://mybinder.org/v2/gh/pablobernabeu/VTT-Transcription-App/HEAD?urlpath=shiny">here</a></h2>
+<div id="globe_with_meridians-the-web-application-can-be-launched-here." class="section level2">
+<h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a>.</h2>
 <p>The data is only available to the user, and is deleted when the website is closed.</p>
 <p>Questions and suggestions can be submitted as <a href="https://github.com/pablobernabeu/VTT-transcription/issues">issues</a> or emailed to <a href="mailto:p.bernabeu@lancaster.ac.uk" class="email">p.bernabeu@lancaster.ac.uk</a>. The app can be extended via pull requests.</p>
 <p>Developer: Pablo Bernabeu (Dept. Psychology, Lancaster University). Licence: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p>
