--- a/index.html
+++ b/index.html
@@ -3852,7 +3852,7 @@
 <tbody>
 <tr>
 <td><strong>Cognitive science</strong></td>
-<td>Electroencephalography, event-related potentials, Brain Vision (e.g., <a href="https://osf.io/97unm/"><i class="fas fa-link"></i></a>), transcranial brain stimulation, eye tracking, online experiments, jsPsych, E-Prime and Presentation</td>
+<td>Electroencephalography, event-related potentials, Brain Vision (e.g., <a href="https://osf.io/97unm/"><i class="fas fa-link"></i></a>), transcranial brain stimulation, eye tracking, online experiments, jsPsych, OpenSesame</td>
 </tr>
 <tr>
 <td><strong>Statistics</strong></td>
@@ -3872,7 +3872,7 @@
 </tr>
 <tr>
 <td><strong>Languages</strong></td>
-<td>English: C1. <a href="https://www.dropbox.com/s/c33q0w4qv8z1mp6/IELTS%202018%20official%20report.pdf?dl=0">IELTS 2018</a> (out of 9): Writing, 7.5; Reading, 7.5; Speaking, 7.5; Listening, 8.5. Spanish: native. Catalan: B1. French: B1. Dutch: A2. Italian: A2</td>
+<td>English: C1. <a href="https://www.dropbox.com/s/c33q0w4qv8z1mp6/IELTS%202018%20official%20report.pdf?dl=0">IELTS 2018</a> (out of 9): Writing, 7.5; Reading, 7.5; Speaking, 7.5; Listening, 8.5. Spanish: native. Catalan: B1. French: B1. Dutch: A2. Italian: A2, Norwegian: A1</td>
 </tr>
 </tbody>
 </table>
